<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space_5dp"
    android:background="@color/white"
    android:foreground="?android:selectableItemBackground"
    android:orientation="horizontal"
    card_view:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="@dimen/space_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/space_5dp">

            <TextView
                android:id="@+id/displayname_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personid_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/personid_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_5dp"
                android:textSize="@dimen/dimens_16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@mipmap/line"></View>

        <LinearLayout
            android:id="@+id/bm_linearLayout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/space_5dp">

            <TextView
                android:id="@+id/cudept_title_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/displayname_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/displayname_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_5dp"
                android:textSize="@dimen/dimens_16sp" />

        </LinearLayout>

        <View
            android:id="@+id/ks_view_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_line"
            android:background="@mipmap/line"></View>

        <LinearLayout
            android:id="@+id/ks_linearLayout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/space_5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cudept_text"
                android:textColor="@color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/cudept_text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_5dp"
                android:textSize="@dimen/dimens_16sp" />

        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>