<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space_5dp"
    android:background="@color/transparent"
    android:foreground="?android:selectableItemBackground"
    android:orientation="horizontal"
    card_view:cardCornerRadius="2dp">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_record" />

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_5dp"
        android:background="@color/white"
        android:foreground="?android:selectableItemBackground"
        android:orientation="horizontal"
        card_view:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="@dimen/space_5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/space_5dp">

                <TextView
                    android:id="@+id/person_title_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_text"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/dailytype_text_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_5dp"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_line"
                android:background="@mipmap/line"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/space_5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desction_text"
                    android:textColor="@color/grid_line"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/description_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_5dp"
                    android:textColor="@color/grid_line"
                    android:textSize="@dimen/dimens_16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_line"
                android:background="@mipmap/line"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/space_5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="项目号"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/projectid_text_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_5dp"
                    android:layout_weight="1"
                    android:text="@string/manhour_text"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/manhour_text_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_5dp"
                    android:layout_weight="1"
                    android:text="@string/status_text"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />

                <TextView
                    android:id="@+id/status_text_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/light_black"
                    android:textSize="@dimen/dimens_16sp" />


            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>